--- a/templates/core/base.html
+++ b/templates/core/base.html
@@ -47,11 +47,20 @@
             >Register Patient</a
           >
           <!-- Link to register patient -->
-          <a
-            href="{% url 'logout' %}"
-            class="px-3 py-2 rounded hover:bg-blue-700"
-            >Logout</a
+          <!-- Logout Button -->
+          <form
+            action="{% url 'logout' %}"
+            method="post"
+            style="display: inline"
           >
+            {% csrf_token %}
+            <button
+              type="submit"
+              class="px-3 py-2 rounded bg-red-600 hover:bg-red-700"
+            >
+              Logout
+            </button>
+          </form>
         </div>
       </div>
     </nav>
